# rs-reader

./: .editorconfig  .gitmodules  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: publish.yml
nested/: reader.html  reader.js
src/: App.tsx  main.tsx  type.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  config.rs  main.rs
src/components/api/: reader.ts
src/components/hooks/: useStore.tsx  useUpload.tsx
src/lib/: env.ts  store.ts  utils.ts
src/pages/: SheetPage.tsx  TableDemo.tsx
