[package]
name = "rs-reader"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "os-all", "protocol-all", "path-all", "fs-all", "dialog-all", "shell-open"] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

serde = { version = "1", features = ["derive"] }
base64 = "0"
serde_json = "1"
once_cell = "1.19.0"
opendal = "0.45.1"
uuid = { version = "1.8.0", features = ["v4"] }
lru = "0"
log = "^0.4.21"
tokio = { version = "1.37", features = ["fs"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
